--- a/templates/booking.html
+++ b/templates/booking.html
@@ -1,17 +1,36 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Booking for {{competition['name']}} || GUDLFT</title>
-</head>
-<body>
-    <h2>{{competition['name']}}</h2>
-    Places available: {{competition['numberOfPlaces']}}
-    <form action="/purchasePlaces" method="post">
-        <input type="hidden" name="club" value="{{club['name']}}">
-        <input type="hidden" name="competition" value="{{competition['name']}}">
-        <label for="places">How many places?</label><input type="number" name="places" id=""/>
-        <button type="submit">Book</button>
-    </form>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Booking for {{ competition['name'] }} || GUDLFT{% endblock title %}
+
+{% block content %}
+
+    <div class="d-flex justify-content-center align-items-center" style="min-height: 50vh;">
+        <div class="card text-center m-2" style="width: 35rem;">
+            <div class="card-header"><h2>{{ competition['name'] }}</h2></div>
+            <div class="card-body">
+                <h5 class="card-title">Places available
+                    for {{ competition['name'] }}: {{ competition['available_places'] }}</h5>
+                <p class="card-text">Your number of points: {{ club['points'] }}</p>
+                <form action="/booking" method="post">
+                    <input type="hidden" name="club" value="{{ club['name'] }}">
+                    <input type="hidden" name="competition" value="{{ competition['name'] }}">
+                    <label for="places">How many places do you want to reserve?</label><br>
+                    {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                            <ul>
+                                {% for message in messages %}
+                                    <li><i>{{ message }}</i></li>
+                                {% endfor %}
+                            </ul>
+                        {% endif %}
+                    {% endwith %}
+                    <input type="number" min="0" name="places" id=""/>
+                    <button type="submit" class="btn btn-primary">Book</button>
+                </form>
+            </div>
+            <div class="card-footer text-body-secondary">Plus que XXX jours pour réserver</div>
+        </div>
+    </div>
+
+
+{% endblock content %}
